--- a/index.html
+++ b/index.html
@@ -49,11 +49,24 @@
             <div class="col">
                 <h1>Быстрые и безопасные грузоперевозки</h1>
                 <h2>Мы предоставляем услуги грузового такси, помогаем с переездами и решаем задачи транспортировки крупных грузов по Кировскому району Калужской области</h2>
+                <div class="d-flex align-items-center">
+                    <a class="order-button d-flex align-items-center" href="tel:8-910-864-72-25">
+                        <img class="order-button-img" src="images/fluent_call-24-filled-lg.png" alt="">
+                        <span class="order-button-text">Заказать</span>
+                    </a>
+                    <span class="order-phone-number">8 910 864 72 25</span>
+                </div>
             </div>
             <div class="col text-end gazel-container">
                 <img src="images/Gazel.png" class="gazel" alt="">
-                <div class="dialogue-wrapper yellow text-start">
-                    <div class="dialogue-text white">от 500₽</div>
+                <div class="dialogue-wrapper-left">
+                    <div class="dialogue-text-left">от 500₽</div>
+                </div>
+                <div class="dialogue-wrapper-center">
+                    <div class="dialogue-text-center">1.5 T</div>
+                </div>
+                <div class="dialogue-wrapper-right">
+                    <div class="dialogue-text-right">20 лет стажа</div>
                 </div>
             </div>
         </div>
