--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="styles/top-panel.css" rel="stylesheet">
     <link href="styles/services-panel.css" rel="stylesheet">
+    <link href="styles/guarantees-panel.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css">
@@ -77,7 +78,10 @@
     </section>
 
     <section id="service-panel" class="services-panel text-center">
-        <span class="services-header">Наши услуги</span>
+        <img class="boxes" src="images/boxes.png" alt="">
+
+        <div class="services-header">Наши услуги</div>
+
         <div class="splide" data-aos="fade-up">
             <div class="splide__arrows">
                 <span class="splide__arrow splide__arrow--prev"></span>
@@ -140,6 +144,80 @@
                         </div>
                     </li>
                 </ul>
+            </div>
+        </div>
+
+        <div class="d-flex justify-content-center services-button-container">
+            <a class="order-button light d-flex align-items-center" href="tel:8-910-864-72-25">
+                <img class="order-button-img" src="images/fluent_call-24-filled-dark.png" alt="">
+                <span class="order-button-text dark">Заказать</span>
+            </a>
+            <a class="suggest-button d-flex align-items-center" href="tel:8-910-864-72-25">
+                <img class="order-button-img" src="images/bxl_telegram.png" alt="">
+                <span class="order-button-text dark">Предложить свою цену</span>
+            </a>
+        </div>
+    </section>
+
+    <section id="guarantees-panel" class="guarantees-panel text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 justify-content-center d-flex">
+                    <div class="guarantee-card d-flex flex-row align-items-center" data-aos="flip-left">
+                        <img src="images/Protection.png" alt="">
+                        <div class="d-flex flex-column">
+                            <div class="guarantee-title">
+                                Безопасность
+                            </div>
+                            <div class="guarantee-text">
+                                Доставим груз в полной
+                                сохранности
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 justify-content-center d-flex">
+                    <div class="guarantee-card d-flex flex-row align-items-center flex-md-row flex-sm-row-reverse" data-aos="flip-left">
+                        <img src="images/User.png" alt="">
+                        <div class="d-flex flex-column">
+                            <div class="guarantee-title">
+                                Сотрудничество
+                            </div>
+                            <div class="guarantee-text">
+                                Ищем пути постоянного и
+                                открытого партнёрства
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 justify-content-center d-flex">
+                    <div class="guarantee-card d-flex flex-row align-items-center" data-aos="flip-left">
+                        <img src="images/Time.png" alt="">
+                        <div class="d-flex flex-column">
+                            <div class="guarantee-title">
+                                Скорость
+                            </div>
+                            <div class="guarantee-text">
+                                Ценим время и поэтому
+                                работаем оперативно
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 justify-content-center d-flex">
+                    <div class="guarantee-card d-flex flex-row align-items-center flex-md-row flex-sm-row-reverse" data-aos="flip-left">
+                        <img src="images/Top.png" alt="">
+                        <div class="d-flex flex-column">
+                            <div class="guarantee-title">
+                                Развитие
+                            </div>
+                            <div class="guarantee-text">
+                                Стремимся развивать
+                                качество грузоперевозок
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
