--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Быстрый грузовой</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="styles/top-panel.css" rel="stylesheet">
     <link href="styles/services-panel.css" rel="stylesheet">
     <link href="styles/guarantees-panel.css" rel="stylesheet">
+    <link href="styles/partners-panel.css" rel="stylesheet">
+    <link href="styles/index.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css">
@@ -15,8 +20,9 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
+<div class="layout">
     <section class="top-panel" id="top-panel">
-        <nav class="navbar navbar-expand-lg" data-aos="fade-down">
+        <nav class="navbar navbar-expand-md" data-aos="fade-down">
             <div class="container-fluid">
                 <a class="logo-container d-flex" href="#top-panel">
                     <img src="images/Box.png" class="logo-image" alt="">
@@ -24,9 +30,6 @@
                         Быстрый<br/>грузовой
                     </div>
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
@@ -49,9 +52,8 @@
                 </div>
             </div>
         </nav>
-        <div class="top-panel-right-bg"></div>
-        <div class="d-flex top-panel-content" data-aos="fade-right">
-            <div class="col">
+        <div class="top-panel-content d-flex" data-aos="fade-right">
+            <div class="col left-col">
                 <h1>Быстрые и безопасные грузоперевозки</h1>
                 <h2>Мы предоставляем услуги грузового такси, помогаем с переездами и решаем задачи транспортировки крупных грузов по Кировскому району Калужской области</h2>
                 <div class="d-flex align-items-center">
@@ -62,15 +64,18 @@
                     <span class="order-phone-number">8 910 864 72 25</span>
                 </div>
             </div>
-            <div class="col text-end gazel-container">
-                <img src="images/Gazel.png" class="gazel" alt="" data-aos="zoom-in-left" data-aos-duration="1500">
-                <div class="dialogue-wrapper-left" data-aos="flip-left" data-aos-delay="500" data-aos-duration="1000">
+            <div class="col right-col">
+                <div class="top-panel-right-bg"></div>
+                <div class="gazel-wrapper">
+                    <img src="images/Gazel.png" class="gazel" alt="" data-aos="zoom-in-left" data-aos-duration="1500">
+                </div>
+                <div class="dialogue-wrapper-left dialogue" data-aos="flip-left" data-aos-delay="500" data-aos-duration="1000">
                     <div class="dialogue-text-left">от 500₽</div>
                 </div>
-                <div class="dialogue-wrapper-center" data-aos="flip-left" data-aos-delay="500" data-aos-duration="1000">
+                <div class="dialogue-wrapper-center dialogue" data-aos="flip-left" data-aos-delay="500" data-aos-duration="1000">
                     <div class="dialogue-text-center">1.5 T</div>
                 </div>
-                <div class="dialogue-wrapper-right" data-aos="flip-right" data-aos-delay="500" data-aos-duration="1000">
+                <div class="dialogue-wrapper-right dialogue" data-aos="flip-right" data-aos-delay="500" data-aos-duration="1000">
                     <div class="dialogue-text-right">20 лет стажа</div>
                 </div>
             </div>
@@ -78,7 +83,9 @@
     </section>
 
     <section id="service-panel" class="services-panel text-center">
-        <img class="boxes" src="images/boxes.png" alt="">
+        <div class="boxes-wpapper">
+            <img class="boxes" src="images/boxes.png" alt="">
+        </div>
 
         <div class="services-header">Наши услуги</div>
 
@@ -147,7 +154,7 @@
             </div>
         </div>
 
-        <div class="d-flex justify-content-center services-button-container">
+        <div class="d-flex flex-wrap justify-content-center services-button-container">
             <a class="order-button light d-flex align-items-center" href="tel:8-910-864-72-25">
                 <img class="order-button-img" src="images/fluent_call-24-filled-dark.png" alt="">
                 <span class="order-button-text dark">Заказать</span>
@@ -162,7 +169,7 @@
     <section id="guarantees-panel" class="guarantees-panel text-center">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 justify-content-center d-flex">
+                <div class="col-md-6 justify-content-md-start justify-content-center d-flex">
                     <div class="guarantee-card d-flex flex-row align-items-center" data-aos="flip-left">
                         <img src="images/Protection.png" alt="">
                         <div class="d-flex flex-column">
@@ -176,8 +183,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 justify-content-center d-flex">
-                    <div class="guarantee-card d-flex flex-row align-items-center flex-md-row flex-sm-row-reverse" data-aos="flip-left">
+                <div class="col-md-6 d-flex justify-content-md-end justify-content-center">
+                    <div class="guarantee-card d-flex flex-row align-items-center flex-md-row flex-row-reverse" data-aos="flip-left">
                         <img src="images/User.png" alt="">
                         <div class="d-flex flex-column">
                             <div class="guarantee-title">
@@ -190,7 +197,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 justify-content-center d-flex">
+                <div class="col-md-6 d-flex justify-content-md-start justify-content-center">
                     <div class="guarantee-card d-flex flex-row align-items-center" data-aos="flip-left">
                         <img src="images/Time.png" alt="">
                         <div class="d-flex flex-column">
@@ -204,8 +211,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 justify-content-center d-flex">
-                    <div class="guarantee-card d-flex flex-row align-items-center flex-md-row flex-sm-row-reverse" data-aos="flip-left">
+                <div class="col-md-6 justify-content-md-end justify-content-center d-flex">
+                    <div class="guarantee-card d-flex flex-row align-items-center flex-md-row flex-row-reverse" data-aos="flip-left">
                         <img src="images/Top.png" alt="">
                         <div class="d-flex flex-column">
                             <div class="guarantee-title">
@@ -222,12 +229,52 @@
         </div>
     </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/js/splide.min.js"></script>
-    <script src="scripts/index.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+    <section class="partners-panel text-center">
+        <div class="services-header">
+            Партнёрам
+        </div>
+        <div class="container">
+            <div class="row gx-4 gy-4 justify-content-center">
+                <div class="col-md-6 justify-content-center d-flex">
+                    <div class="partners-card-with-icon d-flex align-items-center">
+                        <img src="images/ic_baseline-store.png" alt="">
+                        <div class="partners-card-text text-start">
+                            Если вам нужна доставка<br>
+                            для ваших клиентов
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 justify-content-center d-flex">
+                    <div class="partners-card-with-icon d-flex align-items-center">
+                        <img src="images/ic_baseline-store.png" alt="">
+                        <div class="partners-card-text text-start">
+                            Если вам нужны клиенты<br>
+                            для грузоперевозок
+                        </div>
+                    </div>
+                </div>
+                <div class="col justify-content-center d-flex">
+                    <div class="partners-card-bottom">
+                        <div class="partners-card-bottom-text">
+                            Для постоянного сотрудничества мы будем использовать индивидуальные
+                            условия, которые будут созданы совместно с нашими будущими партнёрами.
+                            Нашей целью являются взаимовыгодные и комфортные условия
+                            для развития обеих сторон.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/js/splide.min.js"></script>
+<script src="scripts/index.js"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
+
 </body>
 </html>
