--- a/index.html
+++ b/index.html
@@ -7,24 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="styles/top-panel.css" rel="stylesheet">
-    <link href="styles/services-panel.css" rel="stylesheet">
-    <link href="styles/guarantees-panel.css" rel="stylesheet">
-    <link href="styles/partners-panel.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+    <link href="styles/top-section.css" rel="stylesheet">
+    <link href="styles/services-section.css" rel="stylesheet">
+    <link href="styles/guarantees-section.css" rel="stylesheet">
+    <link href="styles/partners-section.css" rel="stylesheet">
     <link href="styles/index.css" rel="stylesheet">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
 <div class="layout">
-    <section class="top-panel" id="top-panel">
+    <section id="top-section" class="top-section">
         <nav class="navbar navbar-expand-md" data-aos="fade-down">
             <div class="container-fluid">
-                <a class="logo-container d-flex" href="#top-panel">
+                <a class="logo-container d-flex" href="#top-section">
                     <img src="images/Box.png" class="logo-image" alt="">
                     <div class="logo-text navbar-collapse collapse">
                         Быстрый<br/>грузовой
@@ -33,10 +36,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#service-panel">Услуги</a>
+                            <a class="nav-link" href="#service-section'">Услуги</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Партнёрам</a>
+                            <a class="nav-link" href="#partners-section">Партнёрам</a>
                         </li>
                     </ul>
                     <div class="d-flex navbar-right-container">
@@ -52,11 +55,11 @@
                 </div>
             </div>
         </nav>
-        <div class="top-panel-content d-flex" data-aos="fade-right">
+        <div class="top-section-content d-flex" data-aos="fade-right">
             <div class="col left-col">
                 <h1>Быстрые и безопасные грузоперевозки</h1>
-                <h2>Мы предоставляем услуги грузового такси, помогаем с переездами и решаем задачи транспортировки крупных грузов по Кировскому району Калужской области</h2>
-                <div class="d-flex align-items-center">
+                <h2><span>Мы предоставляем услуги грузового такси, помогаем с переездами и решаем задачи транспортировки крупных грузов по Кировскому району Калужской области</span></h2>
+                <div class="d-flex align-items-center flex-wrap">
                     <a class="order-button d-flex align-items-center" href="tel:8-910-864-72-25">
                         <img class="order-button-img" src="images/fluent_call-24-filled-lg.png" alt="">
                         <span class="order-button-text">Заказать</span>
@@ -82,7 +85,7 @@
         </div>
     </section>
 
-    <section id="service-panel" class="services-panel text-center">
+    <section id="service-section'" class="services-section text-center">
         <div class="boxes-wpapper">
             <img class="boxes" src="images/boxes.png" alt="">
         </div>
@@ -166,7 +169,7 @@
         </div>
     </section>
 
-    <section id="guarantees-panel" class="guarantees-panel text-center">
+    <section id="guarantees-section" class="guarantees-section text-center">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 justify-content-md-start justify-content-center d-flex">
@@ -229,7 +232,7 @@
         </div>
     </section>
 
-    <section class="partners-panel text-center">
+    <section id="partners-section" class="partners-section text-center">
         <div class="services-header">
             Партнёрам
         </div>
@@ -266,6 +269,101 @@
             </div>
         </div>
     </section>
+
+    <footer class="top-section">
+        <nav class="navbar navbar-expand-md">
+            <div class="container-fluid">
+                <a class="logo-container d-flex" href="#top-section">
+                    <img src="images/Box.png" class="logo-image" alt="">
+                    <div class="logo-text navbar-collapse collapse">
+                        Быстрый<br/>грузовой
+                    </div>
+                </a>
+                <div class="collapse navbar-collapse flex-grow-0">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#service-section'">Услуги</a>
+                        </li>
+                    </ul>
+                </div>
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Пользовательское соглашение</a>
+                    </li>
+                </ul>
+                <div class="collapse navbar-collapse flex-grow-0">
+                    <div class="d-flex navbar-right-container">
+                        <a class="d-flex navbar-right-item" href="https://yandex.ru/maps/-/CCUBBMADlD" target="_blank" rel="noopener noreferrer">
+                            <img src="images/carbon_location-filled.png" alt="">
+                            <span class="nav-link">Киров, Калужская обл.</span>
+                        </a>
+                        <a class="d-flex navbar-right-item" href="tel:8-910-864-72-25">
+                            <img src="images/fluent_call-24-filled.png" alt="">
+                            <span class="nav-link">8 910 864 72 25</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </footer>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title mx-auto text-center mt-3" id="exampleModalLabel">Пользовательское соглашение</h5>
+                    <button type="button" class="btn-close ms-0" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Настоящее Пользовательское Соглашение (Далее Соглашение) регулирует отношения между владельцем быстрый-грузовой.рф (далее быстрый-грузовой или Администрация) с одной стороны и пользователем сайта с другой.<br>
+                    Сайт быстрый-грузовой не является средством массовой информации.<br>
+                    <br>
+                    Используя сайт, Вы соглашаетесь с условиями данного соглашения.<br>
+                    Если Вы не согласны с условиями данного соглашения, не используйте сайт быстрый-грузовой!<br>
+                    <br>
+                    <h6>Права и обязанности сторон</h6>
+                    Пользователь имеет право:<br>
+                    - осуществлять поиск информации на сайте<br>
+                    - получать информацию на сайте<br>
+                    - копировать информацию на другие сайты с указанием источника<br>
+                    - использовать информацию сайта в личных некоммерческих целях<br>
+                    - использовать информацию сайта в коммерческих целях с разрешения Администрации<br>
+                    <br>
+                    <h6>Администрация имеет право:</h6>
+                    - по своему усмотрению и необходимости создавать, изменять, отменять правила<br>
+                    - ограничивать доступ к любой информации на сайте<br>
+                    - создавать, изменять, удалять информацию<br>
+                    - удалять учетные записи<br>
+                    - отказывать в регистрации без объяснения причин<br>
+                    <br>
+                    <br>
+                    <h6>Пользователь обязуется:</h6>
+                    - не нарушать работоспособность сайта<br>
+                    - не использовать скрипты (программы) для автоматизированного сбора информации и/или взаимодействия с Сайтом и его Сервисами<br>
+                    <br>
+                    <h6>Администрация обязуется:</h6>
+                    - поддерживать работоспособность сайта за исключением случаев, когда это невозможно по независящим от Администрации причинам.<br>
+                    - осуществлять разностороннюю защиту учетной записи Пользователя<br>
+                    - защищать информацию, распространение которой ограничено или запрещено законами путем вынесения предупреждения либо удалением учетной записи пользователя, нарушившего правила<br>
+                    - предоставить всю доступную информацию о Пользователе уполномоченным на то органам государственной власти в случаях, установленных законом<br>
+                    <br>
+                    <br>
+                    <h6>Ответственность сторон</h6>
+                    - пользователь лично несет полную ответственность за распространяемую им информацию<br>
+                    - администрация не несет никакой ответственности за достоверность информации, скопированной из других источников<br>
+                    - администрация не несёт ответственность за несовпадение ожидаемых Пользователем и реально полученных услуг<br>
+                    - администрация не несет никакой ответственности за услуги, предоставляемые третьими лицами<br>
+                    - в случае возникновения форс-мажорной ситуации (боевые действия, чрезвычайное положение, стихийное бедствие и т. д.) Администрация не гарантирует сохранность информации, размещённой Пользователем, а также бесперебойную работу информационного ресурса<br>
+                    <br>
+                    <h6>Условия действия Соглашения</h6>
+                    Данное Соглашение вступает в силу при любом использовании данного сайта.<br>
+                    Соглашение перестает действовать при появлении его новой версии.<br>
+                    Администрация оставляет за собой право в одностороннем порядке изменять данное соглашение по своему усмотрению.<br>
+                    Администрация не оповещает пользователей об изменении в Соглашении.<br>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
