--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 </div>
                 <div class="col-md-6 justify-content-center d-flex">
                     <div class="partners-card-with-icon d-flex align-items-center">
-                        <img src="images/ic_baseline-store.png" alt="">
+                        <img src="images/truck_complete.png" alt="">
                         <div class="partners-card-text text-start">
                             Если вам нужны клиенты<br>
                             для грузоперевозок
