--- a/index.html
+++ b/index.html
@@ -273,14 +273,21 @@
                 <div class="col justify-content-center d-flex">
                     <div class="partners-card-bottom">
                         <div class="partners-card-bottom-text">
-                            Для постоянного сотрудничества мы будем использовать индивидуальные
-                            условия, которые будут созданы совместно с нашими будущими партнёрами.
-                            Нашей целью являются взаимовыгодные и комфортные условия
-                            для развития обеих сторон.
+                            <p>Для постоянного сотрудничества мы будем использовать индивидуальные
+                                условия, которые будут созданы совместно с нашими будущими партнёрами.</p>
+                            <p>Нашей целью являются взаимовыгодные и комфортные условия
+                                для развития обеих сторон.</p>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="d-flex flex-column align-items-center">
+            <div class="offer_terms_text">Предложите свои условия</div>
+            <a class="offer-terms-button light d-flex align-items-center" href="tel:8-910-864-72-25">
+                <img class="order-button-img" src="images/fluent_call-24-filled-dark.png" alt="">
+                <span class="offer-terms-button-text dark">Связаться</span>
+            </a>
         </div>
     </section>
 
@@ -385,7 +392,9 @@
 <script src="scripts/index.js"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
-    AOS.init();
+    AOS.init({
+        offset: 60
+    });
 </script>
 
 </body>
