--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="col left-col">
                 <h1><span>Быстрые и безопасные грузоперевозки</span></h1>
                 <h2><span>Мы предоставляем услуги грузового такси, помогаем с переездами и решаем задачи транспортировки крупных грузов по Кировскому району Калужской области</span></h2>
-                <div class="d-flex align-items-center flex-wrap">
+                <div class="order-button-container d-flex align-items-center flex-wrap">
                     <a class="order-button d-flex align-items-center" href="tel:8-910-864-72-25">
                         <img class="order-button-img" src="images/fluent_call-24-filled-lg.png" alt="">
                         <span class="order-button-text">Заказать</span>
