--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
                 <div class="gazel-wrapper">
                     <img src="images/Gazel.png" class="gazel" alt="" data-aos="zoom-in-left" data-aos-duration="1500">
                 </div>
-                <div class="dialogue-wrapper-left dialogue" data-aos="flip-left" data-aos-delay="500" data-aos-duration="1000">
+                <div class="dialogue-wrapper-left dialogue" data-aos="zoom-in-up" data-aos-delay="500" data-aos-duration="1000">
                     <div class="dialogue-text-left">от 500₽</div>
                 </div>
-                <div class="dialogue-wrapper-center dialogue" data-aos="flip-left" data-aos-delay="500" data-aos-duration="1000">
+                <div class="dialogue-wrapper-center dialogue" data-aos="zoom-in-up" data-aos-delay="500" data-aos-duration="1000">
                     <div class="dialogue-text-center">1.5 T</div>
                 </div>
-                <div class="dialogue-wrapper-right dialogue" data-aos="flip-right" data-aos-delay="500" data-aos-duration="1000">
+                <div class="dialogue-wrapper-right dialogue" data-aos="zoom-in-up" data-aos-delay="500" data-aos-duration="1000">
                     <div class="dialogue-text-right">20 лет стажа</div>
                 </div>
             </div>
@@ -173,7 +173,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 justify-content-md-start justify-content-center d-flex">
-                    <div class="guarantee-card d-flex flex-row align-items-center" data-aos="flip-left">
+                    <div class="guarantee-card d-flex flex-row align-items-center">
                         <img src="images/Protection.png" alt="">
                         <div class="d-flex flex-column">
                             <div class="guarantee-title">
@@ -187,7 +187,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 d-flex justify-content-md-end justify-content-center">
-                    <div class="guarantee-card d-flex flex-row align-items-center flex-md-row flex-row-reverse" data-aos="flip-left">
+                    <div class="guarantee-card d-flex flex-row align-items-center flex-md-row flex-row-reverse">
                         <img src="images/User.png" alt="">
                         <div class="d-flex flex-column">
                             <div class="guarantee-title">
@@ -201,7 +201,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 d-flex justify-content-md-start justify-content-center">
-                    <div class="guarantee-card d-flex flex-row align-items-center" data-aos="flip-left">
+                    <div class="guarantee-card d-flex flex-row align-items-center">
                         <img src="images/Time.png" alt="">
                         <div class="d-flex flex-column">
                             <div class="guarantee-title">
@@ -215,7 +215,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 justify-content-md-end justify-content-center d-flex">
-                    <div class="guarantee-card d-flex flex-row align-items-center flex-md-row flex-row-reverse" data-aos="flip-left">
+                    <div class="guarantee-card d-flex flex-row align-items-center flex-md-row flex-row-reverse">
                         <img src="images/Top.png" alt="">
                         <div class="d-flex flex-column">
                             <div class="guarantee-title">
