--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
                     </div>
                 </div>
             </div>
-            <div class="d-flex flex-column align-items-center">
-                <div class="offer_terms_text">Предложите свои условия</div>
+            <div class="offer-terms-container d-flex flex-row justify-content-center align-items-center gap-3">
+                <a class="offer_terms_text" href="tel:8-910-864-72-25">Предложите свои условия</a>
                 <a class="offer-terms-button light d-flex align-items-center" href="tel:8-910-864-72-25">
                     <img class="order-button-img" src="images/fluent_call-24-filled-dark.png" alt="">
                     <span class="offer-terms-button-text dark">Связаться</span>
@@ -335,6 +335,15 @@
             </div>
         </nav>
     </footer>
+
+    <a class="call-button" href="tel:8-910-864-72-25">
+        <svg xmlns="http://www.w3.org/2000/svg" width="19" height="27" viewBox="0 0 19 27" fill="none">
+            <path d="M3.53845 1.35398L4.92191 0.903798C6.21922 0.482408 7.60524 1.16422 8.16068 2.49644L9.26642 5.15041C9.74728 6.30597 9.47985 7.66567 8.60555 8.51106L6.16907 10.864C6.3195 12.2722 6.78494 13.658 7.5641 15.0217C8.304 16.341 9.29646 17.4958 10.4827 18.4177L13.4091 17.4231C14.5174 17.0475 15.726 17.4806 16.4048 18.4975L17.9902 20.8662C18.7809 22.0492 18.6382 23.6798 17.6571 24.6822L16.6067 25.7566C15.5601 26.8258 14.0648 27.2145 12.6826 26.7748C9.41685 25.7383 6.41722 22.6617 3.6786 17.5448C0.936117 12.42 -0.0320442 8.07004 0.7754 4.50001C1.11483 2.99766 2.16528 1.80023 3.53845 1.35398Z" fill="white"/>
+        </svg>
+        <div class="call-button__text">
+            Позвонить
+        </div>
+    </a>
 
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-xl">
