--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                     </div>
                 </div>
             </nav>
-            <div class="top-section-content d-flex" data-aos="fade-right">
+            <div class="top-section-content d-flex">
                 <div class="col left-col">
-                    <h1><span>Быстрые и безопасные грузоперевозки</span></h1>
-                    <h2><span>Мы предоставляем услуги грузового такси, помогаем с переездами и решаем задачи транспортировки крупных грузов по Кировскому району Калужской области</span></h2>
-                    <div class="order-button-container d-flex align-items-center flex-wrap">
+                    <h1 data-aos="fade-right"><span>Быстрые и безопасные грузоперевозки</span></h1>
+                    <h2 data-aos="fade-right"><span>Мы предоставляем услуги грузового такси, помогаем с переездами и решаем задачи транспортировки крупных грузов по Кировскому району Калужской области</span></h2>
+                    <div class="order-button-container d-flex align-items-center flex-wrap" data-aos="fade-right">
                         <a class="order-button d-flex align-items-center" href="tel:8-910-864-72-25">
                             <img class="order-button-img" src="images/fluent_call-24-filled-lg.png" alt="">
                             <span class="order-button-text">Заказать</span>
@@ -261,7 +261,7 @@
                 <div class="row gx-4 gy-4 justify-content-center">
                     <div class="col-md-6 justify-content-center d-flex">
                         <div class="partners-card-with-icon d-flex align-items-center">
-                            <img src="images/ic_baseline-store.png" alt="">
+                            <img src="images/store_new.png" alt="">
                             <div class="partners-card-text text-start">
                                 Если вам нужна доставка<br>
                                 для ваших клиентов
@@ -270,7 +270,7 @@
                     </div>
                     <div class="col-md-6 justify-content-center d-flex">
                         <div class="partners-card-with-icon d-flex align-items-center">
-                            <img src="images/truck_complete.png" alt="">
+                            <img src="images/truck_new.png" alt="">
                             <div class="partners-card-text text-start">
                                 Если вам нужны клиенты<br>
                                 для грузоперевозок
